<resources>
    <string name="app_name">Credit Note</string>
    <string name="app_dev">Phantom Projects</string>
    <string name="saved_business_name">Business Name</string>
    <string name="to_view_name">Credits List </string>
    <string name="action_settings">Settings</string>
    <string name="about">An easy way to take a note of your personal as well as small business credits.
        \nWe are offline at the moment but we shall be syncing the data with cloud soon.
        \nRatings and Reviews would help us to make the app better.
        \nThank you.
        \n \nDeveloper : <a href="">a1100.b1100@gmail.com</a>
    </string>
    <string name="about_link"><b> Icon Credit</b> :
        <a href="http://www.flaticon.com/authors/freepik">Freepik</a>
        from
        <a href="http://www.flaticon.com ">www.flaticon.com </a>
    </string>
    <string name="banner_home_footer">ca-app-pub-3940256099942544/6300978111</string>
    <string-array name="pref_currency_keys">
        <item>NRS</item>
        <item>INR</item>
        <item>AED</item>
        <item>PHP</item>
        <item>IDR</item>
        <item>GBP</item>
        <item>LKR</item>
        <item>MYR</item>
        <item>PKR</item>
        <item>KRW</item>
        <item>XAF</item>
        <item>MAD</item>
        <item>USD</item>
    </string-array>
    <string name="profile">PROFILE</string>
    <string name="feed">FEED</string>
    <string name="activity">ACTIVITY</string>
    <string name="title_activity_account_book">AccountBook</string>
    <string name="title_activity_tag_setting">TagSetting</string>
    <string name="home_view">Home</string>
    <string name="list_view">List View</string>
    <string name="add_new">Add new</string>
    <string name="item_settings">Item settings</string>
    <string name="expense_report">Expense report</string>
    <string name="rate">Rate and review</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="_about">About</string>
    <string name="today_empty">New day!</string>
    <string name="yesterday_empty">No records.</string>
    <string name="this_week_empty">New week!</string>
    <string name="last_week_empty">No records.</string>
    <string name="this_month_empty">New month!</string>
    <string name="last_month_empty">No records.</string>
    <string name="this_year_empty">Happy new year!</string>
    <string name="last_year_empty">No records.</string>
    <string name="january_short">Jan.</string>
    <string name="february_short">Feb.</string>
    <string name="march_short">Mar.</string>
    <string name="april_short">Apr.</string>
    <string name="may_short">May</string>
    <string name="june_short">June</string>
    <string name="july_short">July</string>
    <string name="august_short">Aug.</string>
    <string name="september_short">Sept.</string>
    <string name="october_short">Oct.</string>
    <string name="november_short">Nov.</string>
    <string name="december_short">Dec.</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">Marc</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="today_date_string">today</string>
    <string name="yesterday_date_string">yesterday</string>
    <string name="this_week_date_string">this week</string>
    <string name="last_week_date_string">last week</string>
    <string name="this_month_date_string">this month</string>
    <string name="last_month_date_string">last month</string>
    <string name="this_year_date_string">this year</string>
    <string name="last_year_date_string">last year</string>
    <string name="at">at </string>
    <string name="on">on </string>
    <string name="in">in </string>
    <string name="o_clock">o\'clock</string>
    <string name="monday_short">MON</string>
    <string name="tuesday_short">TUE</string>
    <string name="wednesday_short">WED</string>
    <string name="thursday_short">THU</string>
    <string name="friday_short">FRI</string>
    <string name="saturday_short">SAT</string>
    <string name="sunday_short">SUN</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="last">last </string>
    <string name="check">check</string>
    <string name="today_view_today">Today</string>
    <string name="today_view_yesterday">Yesterday</string>
    <string name="today_view_this_week">This Week</string>
    <string name="today_view_last_week">Last Week</string>
    <string name="today_view_this_month">This Month</string>
    <string name="today_view_last_month">Last Month</string>
    <string name="today_view_this_year">This Year</string>
    <string name="today_view_last_year">Last Year</string>
    <string name="get">Get!</string>
    <string name="tag_sum_pie">Sum Pie</string>
    <string name="tag_sum_histogram">Sum Histogram</string>
    <string name="tag_meal">Dinner</string>
    <string name="tag_closet">Clothing &amp; Footwear</string>
    <string name="tag_home">Home</string>
    <string name="tag_traffic">Traffic</string>
    <string name="tag_vehicle_maintenance">Vehicle Maintenance</string>
    <string name="tag_book">Book</string>
    <string name="tag_hobby">Hobby</string>
    <string name="tag_internet">Internet</string>
    <string name="tag_friend">Friend</string>
    <string name="tag_education">Education</string>
    <string name="tag_entertainment">Entertainment</string>
    <string name="tag_medical">Medical</string>
    <string name="tag_insurance">Insurance</string>
    <string name="tag_donation">Donation</string>
    <string name="tag_sport">Sport</string>
    <string name="tag_snack">Snack</string>
    <string name="tag_music">Music</string>
    <string name="tag_fund">Fund</string>
    <string name="tag_drink">Drink</string>
    <string name="tag_fruit">Fruit</string>
    <string name="tag_film">Film</string>
    <string name="tag_baby">Baby</string>
    <string name="tag_partner">Partner</string>
    <string name="tag_housing_loan">Housing Loan</string>
    <string name="tag_pet">Pet</string>
    <string name="tag_telephone_bill">Telephone Bill</string>
    <string name="tag_travel">Travel</string>
    <string name="tag_lunch">Lunch</string>
    <string name="tag_breakfast">Breakfast</string>
    <string name="tag_midnight_snack">Midnight Snack</string>
    <string name="password_tip">Input password to account book</string>
    <string name="toast_no_tag">Just...give me a tag~</string>
    <string name="toast_no_money">How much U spend?</string>
    <string name="toast_password_wrong">Ooops...That\'s wrong!</string>
    <string name="toast_password_correct">That\'s it!</string>
    <string name="toast_save_successfully">Save successfully!</string>
    <string name="toast_save_failed">Ooops...Save fail!</string>
    <string name="toast_press_again_to_exit">Press again to say goodbye</string>
    <string name="sort_tags">Sort Tags</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="search">Search</string>
    <string name="tag_empty">No records!</string>
    <string name="undo">Undo</string>
    <string name="deleting">Delete this coCoinRecord</string>
    <string name="title_activity_edit_record">EditRecordActivity</string>
    <string name="from_invalid">The starting time is invalid!</string>
    <string name="to_invalid">The ending time is invalid!</string>
    <string name="account_book_name_hint">Account book title</string>
    <string name="user_name_hint">User name</string>
    <string name="user_email_hint">User email</string>
    <string name="test_user_name">Nightonke</string>
    <string name="test_user_email">Nightonke@gmail.com</string>
    <string name="total_credit_text">Credits[-]</string>
    <string name="total_debit_text">Debits[+]</string>
    <string name="records_text">Records</string>
    <string name="total_dues">Total Dues</string>
    <string name="month_limit">Max expense monthly</string>
    <string name="month_color_remind">Color remind</string>
    <string name="month_warning">Color remind when expense over</string>
    <string name="color_alert">Remind color</string>
    <string name="month_forbidden">Forbidden coCoinRecord money when out of limit</string>
    <string name="auto_back_up">Auto backup records</string>
    <string name="account_book_name">Notes\'s name</string>
    <string name="currency_code">Currency code</string>
    <string name="sort_tag">Sort tags</string>
    <string name="dues_limit_value_text">Set dues limit</string>
    <string name="dues_limit_switch_text">Excessive dues reminder</string>
    <string name="default_user_name">You haven\'t logged on! After logging on, </string>
    <string name="default_user_email">you can save your records to cloud. Click me to do so!</string>
    <string name="note_name_dialog_title">Name your credit note</string>
    <string name="submit">Submit!</string>
    <string name="cancel">Cancel</string>
    <string name="custom">Custom</string>
    <string name="back">Back</string>
    <string name="default_currency">NRS</string>
    <string name="set_password_successfully">You did it!</string>
    <string name="password_tip_0">Verify your old password</string>
    <string name="password_tip_1">Input your new password</string>
    <string name="password_tip_2">Input again to verify</string>
    <string name="set_month_expense_dialog_title">Be thrifty!</string>
    <string name="set_warning_expense_dialog_title">Set your target</string>
    <string name="set_remind_color_dialog_title">Colors!</string>
    <string name="set_remind_color_dialog_sub_title">Shades of Colors!</string>
    <string name="this_month">This month:</string>
    <string name="welcome">Welcome!</string>
    <string name="login_or_register">Do you have a CoCoin account?</string>
    <string name="login">Sure</string>
    <string name="register">Not yet</string>
    <string name="register_user_name">Show me a cool user name!</string>
    <string name="register_user_email">You can regain your password by email.</string>
    <string name="register_password">I can keep secret!</string>
    <string name="go_register">Register!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="hi">Hi!&#160;</string>
    <string name="log_out">Log out</string>
    <string name="whether_logout">Are you sure to log out?</string>
    <string name="go_login">Login!</string>
    <string name="login_user_name">Tell me your register name or email.</string>
    <string name="login_password">Tell me your password (be quiet!).</string>
    <string name="change_account_book_name_successfully">Change name successfully</string>
    <string name="change_account_book_name_fail">Change name fail</string>
    <string name="change_and_update_account_book_name_successfully">
        Change name and update to server successfully
    </string>
    <string name="change_and_update_account_book_name_fail">
        Change name but update to server fail
    </string>
    <string name="register_successfully">Welcome to CoCoin!\n</string>
    <string name="register_fail">Register fail!\n</string>
    <string name="login_successfully">Welcome back!\n</string>
    <string name="login_fail">Login fail!\n</string>
    <string name="user_name_exist">User name already exists</string>
</resources>