<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/left_drawer"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@android:color/white"
    android:clickable="true"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="160dp" />

        <com.daimajia.slider.library.Indicators.PagerIndicator
            android:id="@+id/custom_indicator"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <net.steamcrafted.materialiconlib.MaterialIconView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:scaleType="center"
                app:materialIcon="human_greeting"
                app:materialIconColor="@color/white"
                app:materialIconSize="36dp" />

            <TextView
                android:id="@+id/credit_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="Welcome"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </LinearLayout>

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/custom_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="5dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#0000ff"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:id="@+id/custom_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:scaleType="center"
                        app:materialIcon="home"
                        app:materialIconColor="@color/colorPrimaryDark"
                        app:materialIconSize="24dp" />

                    <TextView
                        android:id="@+id/custom_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/home_view"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/tag_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="5dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#0000ff"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:id="@+id/tag_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:scaleType="center"
                        app:materialIcon="view_list"
                        app:materialIconColor="@color/colorPrimaryDark"
                        app:materialIconSize="24dp" />

                    <TextView
                        android:id="@+id/tag_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/list_view"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/month_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="5dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#0000ff"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:id="@+id/month_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:scaleType="center"
                        app:materialIcon="plus_circle"
                        app:materialIconColor="@color/colorPrimaryDark"
                        app:materialIconSize="24dp" />

                    <TextView
                        android:id="@+id/month_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/add_new"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/list_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="5dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#0000ff"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:id="@+id/list_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:scaleType="center"
                        app:materialIcon="tag_plus"
                        app:materialIconColor="@color/colorPrimaryDark"
                        app:materialIconSize="24dp" />

                    <TextView
                        android:id="@+id/list_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/item_settings"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp" />


            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/rate_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#0000ff"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:id="@+id/rate_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:scaleType="center"
                        app:materialIcon="star"
                        app:materialIconColor="@color/colorAccent"
                        app:materialIconSize="24dp" />


                    <TextView
                        android:id="@+id/rate_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/rate"
                        android:textColor="@color/colorAccent" />

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/settings_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="5dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#0000ff"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:id="@+id/settings_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:scaleType="center"
                        app:materialIcon="settings"
                        app:materialIconColor="@color/colorPrimaryDark"
                        app:materialIconSize="24dp" />

                    <TextView
                        android:id="@+id/settings_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/settings"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/help_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="5dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#0000ff"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:id="@+id/help_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:scaleType="center"
                        app:materialIcon="help_circle"
                        app:materialIconColor="@color/colorPrimaryDark"
                        app:materialIconSize="24dp" />

                    <TextView
                        android:id="@+id/help_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/help"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/about_layout"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="5dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#0000ff"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:id="@+id/about_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:scaleType="center"
                        app:materialIcon="information"
                        app:materialIconColor="@color/colorPrimaryDark"
                        app:materialIconSize="24dp" />

                    <TextView
                        android:id="@+id/about_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/_about"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>